// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageProgression component when an active section is supplied marks the previous sections as done and the current one as active 1`] = `
<ul
  css={
    Object {
      "map": undefined,
      "name": "48yusx",
      "next": undefined,
      "styles": "
  display: flex;
  list-style: none;
  height: 54px;
  padding: 0;
  margin: 0;
",
      "toString": [Function],
    }
  }
>
  <li
    className="active"
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Newsletters
    </div>
  </li>
  <li
    className=""
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Stay in touch
    </div>
  </li>
  <li
    className=""
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Your data
    </div>
  </li>
</ul>
`;

exports[`PageProgression component when no active page is set shows the first step as the active step 1`] = `
<ul
  css={
    Object {
      "map": undefined,
      "name": "48yusx",
      "next": undefined,
      "styles": "
  display: flex;
  list-style: none;
  height: 54px;
  padding: 0;
  margin: 0;
",
      "toString": [Function],
    }
  }
>
  <li
    className="active"
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Newsletters
    </div>
  </li>
  <li
    className=""
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Stay in touch
    </div>
  </li>
  <li
    className=""
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Your data
    </div>
  </li>
</ul>
`;

exports[`PageProgression component when on the last section marks the previous sections as done and the last one as active 1`] = `
<ul
  css={
    Object {
      "map": undefined,
      "name": "48yusx",
      "next": undefined,
      "styles": "
  display: flex;
  list-style: none;
  height: 54px;
  padding: 0;
  margin: 0;
",
      "toString": [Function],
    }
  }
>
  <li
    className=""
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Newsletters
    </div>
  </li>
  <li
    className=""
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Stay in touch
    </div>
  </li>
  <li
    className=""
    css={
      Object {
        "map": undefined,
        "name": "1g4ulkr",
        "next": undefined,
        "styles": "
  
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 400;
	;

  position: relative;
  width: 33.333333333333336%;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  &.active {
    
	font-family: GuardianTextSans, Guardian Text Sans Web, Helvetica Neue, Helvetica, Arial, Lucida Grande, sans-serif;
	font-size: 0.9375rem;
	line-height: 1.5;
	font-weight: 700;
	;

  }
  &::after,
  &.complete::after {
    content: ' ';
    background-color: #999999;
    height: 2px;
    position: absolute;
    // Border position from top is distance of a semicircle minus half the border thickness
    top: 13px;
    left: 28px;
    right: 0;
  }
  &.complete::after {
    height: 4px;
    background-color: #052962;
  }
  &:last-child::after {
    display: none;
  }
  &::before {
    border: 2px solid #999999;
    border-radius: 50%;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  &.active::before,
  &.complete::before {
    content: ' ';
    background-color: #052962;
    border: 2px solid #052962;
    
  content: ' ';
  box-sizing: content-box;
  border-radius: 50%;
  height: 24px;
  position: absolute;
  left: 0;
  top: 0;
  width: 24px;

  }
  & svg {
    display: none;
  }
  &.complete svg {
    position: absolute;
    display: block;
    stroke: white;
    fill: white;
    height: 24px;
    width: 24px;
    margin: 2px;
    top: 0;
    left: 0;
    z-index: 1;
  }
",
        "toString": [Function],
      }
    }
  >
    <svg
      viewBox="0 0 30 30"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clipRule="evenodd"
        d="M6 14.775l-1 1 5 7h.475l14.3-14.8-1-.975-13.3 12.05L6 14.775z"
        fillRule="evenodd"
      />
    </svg>
    <div>
      Your data
    </div>
  </li>
</ul>
`;
